skeleton ui is now usable

--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -1,4 +1,4 @@
-html {
+/* html {
     background-color: #89ad5f;
     
 }
@@ -18,4 +18,4 @@ h2 {
     display:inline-block;
     margin: 40px 8px 10px 8px; 
     color: #cccccc;
-}
+} */
