a shity apimockup, need some persistence

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -6,26 +6,26 @@
     src: url('$lib/assets/fonts/Spicy Soup.otf') format('opentype')
   }
 
+#header, #main, #footer {
+    font-family: 'spicysoup', sans-serif;
+}
 
 #header {
-    font-family: 'spicysoup', sans-serif;
     min-height: 15vh;
     margin-bottom: 20px;
-
 }
-main {
-    font-family: 'spicysoup', sans-serif;
+
+#main {
     display: flex;
     min-height: 70vh;
     justify-content: center;
     align-items: center;
 }
 
-footer {
+#footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'spicysoup', sans-serif;
     background-color: rgba(0, 0, 0, 0.8);
     min-height: 15vh;
     margin-top: 20px;
