--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -13,6 +13,9 @@
 #header {
     min-height: 12vh;
     margin-bottom: 20px;
+    position: absolute;
+    width: 100%;
+    z-index: 3;
 }
 
 #main {
@@ -29,4 +32,5 @@
     background-color: rgba(0, 0, 0, 0.8);
     min-height: 15vh;
     margin-top: 20px;
+    z-index: 3;
 }
